<resources>
    <string name="app_name">Worktrack</string>
    <string name="app_name_inc_version">Worktrack</string>
    <string name="app_slogan">Keep your working time under control!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="drawer_label_pro">Worktrack PRO</string>
    <string name="drawer_label_dev">Worktrack DEV</string>
    <string name="drawer_label_go_pro">Upgrade to PRO version</string>
    <string name="activity_manage_workplaces">Manage Workplaces</string>
    <string name="activity_manage_workplaces_action_add">Add Workplace</string>
    <string name="activity_manage_workplaces_action_rename">Rename</string>
    <string name="activity_manage_workplaces_action_delete">Delete</string>
    <string name="activity_manage_workplaces_dialog_delete_title">Discard workplace?</string>
    <string name="activity_manage_workplaces_dialog_delete_confirm">Discard</string>
    <string name="activity_manage_workplaces_dialog_delete_cancel">Cancel</string>
    <string name="activity_manage_workplaces_error_message_permission">Required location permission not granted.</string>
    <string name="activity_manage_workplaces_emptyview_text">Add new workplaces with the + button at the bottom right.</string>
    <string name="activity_manage_workplaces_emptyview_title">No workplaces</string>
    <string name="activity_manage_workplaces_emptyview_icondesc">No workplaces.</string>
    <string name="activity_pick_location">Choose location</string>
    <string name="activity_pick_location_action_confirm">OK</string>
    <string name="activity_dayverview">Daily Overview</string>
    <string name="activity_dayoverview_incorrect_warning">Items are not correct!</string>
    <string name="activity_dayoverview_action_select_date">Choose date</string>
    <string name="activity_dayoverview_action_select_datetime">Choose date and time</string>
    <string name="activity_dayoverview_action_select_date_confirm">OK</string>
    <string name="activity_dayoverview_action_select_date_cancel">Cancel</string>
    <string name="activity_dayoverview_action_checkin_now">Check-In Now</string>
    <string name="activity_dayoverview_action_checkin_specified">Check-In At</string>
    <string name="activity_dayoverview_action_checkout_now">Check-Out Now</string>
    <string name="activity_dayoverview_action_checkout_specified">Check-Out At</string>
    <string name="activity_dayoverview_action_delete_title">Discard Tracking Item?</string>
    <string name="activity_dayoverview_action_delete_ok">Discard</string>
    <string name="activity_dayoverview_action_delete_cancel">Cancel</string>
    <string name="activity_dayoverview_message_event_deleted">Event deleted.</string>
    <string name="activity_dayoverview_message_event_added">Event added.</string>
    <string name="activity_dayoverview_message_unable_jump_into_future">Unable to jump into future.</string>
    <string name="activity_dayoverview_dialog_nodata_title">No Data</string>
    <string name="activity_dayoverview_dialog_nodata_message">There is no event data in the app yet. First you need to track your working time. You can do this manually or by adding a workplace.</string>
    <string name="activity_dayoverview_emptyview_text">Add new events with the + button at the bottom right or add a new workplace to track your working time automatically by your location.</string>
    <string name="activity_dayoverview_emptyview_title">No events</string>
    <string name="activity_dayoverview_emptyview_button_add_workplace">Add Workplace</string>
    <string name="activity_dayoverview_emptyview_icondesc">No events.</string>
    <string name="activity_weekoverview">Weekly Overview</string>
    <string name="activity_weekoverview_action_export_mail">Export</string>
    <string name="activity_weekoverview_chart_xaxis_label">Week days</string>
    <string name="activity_weekoverview_chart_yaxis_label">Hours per day</string>
    <string name="activity_yearoverview">Year Overview</string>
    <string name="activity_yearoverview_overhours_label">Extra hours this year</string>
    <string name="activity_yearoverview_chart_xaxis_label">Calendar weeks</string>
    <string name="activity_yearoverview_chart_yaxis_label">Hours per week</string>
    <string name="activity_manage_backups">Backups</string>
    <string name="activity_manage_backups_error_loading_backups">Error while loading backups.</string>
    <string name="activity_manage_backups_error_deleting_backup">Error while deleting backup.</string>
    <string name="activity_manage_backups_error_importing_backup">Error while importing backup.</string>
    <string name="activity_manage_backups_create_backup_succeeded">Backup successfully created.</string>
    <string name="activity_manage_backups_import_backup_succeeded">Import of backup succeeded.</string>
    <string name="activity_manage_backups_discard_backup_succeeded">Backup successfully discarded.</string>
    <string name="activity_manage_backups_dialog_discard_title">Discard Backup?</string>
    <string name="activity_manage_backups_dialog_import_title">Import Backup?</string>
    <string name="activity_manage_backups_dialog_error_account_unset_title">Settings missing</string>
    <string name="activity_manage_backups_dialog_error_account_unset_message">You did not yet chose a Google account where backups shall be stored. Do you want to chose now?</string>
    <string name="activity_manage_backups_dialog_error_account_unset_confirm">Configure</string>
    <string name="activity_manage_backups_dialog_error_account_unset_cancel">No</string>
    <string name="activity_manage_backups_emptyview_text">Add new backups with the + button at the bottom right or configure automatic backups in settings.</string>
    <string name="activity_manage_backups_emptyview_title">No backups</string>
    <string name="activity_manage_backups_emptyview_button_configure_backups">Configure Backups</string>
    <string name="activity_manage_backups_emptyview_icondesc">No backups.</string>
    <string name="activity_settings">Settings</string>
    <string name="dialog_datetime_chooser_title">Choose Date and Time</string>
    <string name="dialog_weekpicker_title">Navigate to week</string>
    <string name="dialog_weekpicker_message">Select a week and year:</string>
    <string name="dialog_weekpicker_button_ok">Navigate</string>
    <string name="dialog_weekpicker_button_cancel">Cancel</string>
    <string name="dialog_weekpicker_label_week">Week:</string>
    <string name="dialog_weekpicker_label_year">Year:</string>
    <string name="dialog_backup_title_input_title">Backup Name</string>
    <string name="dialog_backup_title_input_confirm">Backup</string>
    <string name="dialog_backup_title_input_cancel">Cancel</string>
    <string name="dialog_authentication_title">Authenticate</string>
    <string name="dialog_authentication_button_cancel">Cancel</string>
    <string name="dialog_authentication_button_use_fingerprint">USE FINGERPRINT</string>
    <string name="dialog_authentication_button_use_password">USE PASSWORD</string>
    <string name="dialog_authentication_hint_fingerprint">Tab fingerprint sensor</string>
    <string name="dialog_authentication_button_password_submit">Submit</string>
    <string name="dialog_account_picker_title">Choose Account</string>
    <string name="dialog_account_picker_cancel">Cancel</string>
    <string name="dialog_workplace_title_query_title">Set Workplace Name</string>
    <string name="dialog_workplace_title_query_button_ok">Save</string>
    <string name="dialog_workplace_title_query_button_cancel">Cancel</string>
    <string name="dialog_workplace_title_query_label_location">Location:</string>
    <string name="dialog_workplace_title_query_label_radius">Radius:</string>
    <string name="dialog_workplace_title_query_hint_name">Name</string>
    <string name="dialog_explain_swipe_days_title">Swipe left or right</string>
    <string name="dialog_explain_swipe_days_icon_desc">Swipe left or right</string>
    <string name="dialog_explain_swipe_days_message">Once you collected data for some days, you can swipe left and right to navigate through days.</string>
    <string name="dialog_feature_only_in_pro_title">Pro Feature</string>
    <string name="dialog_feature_only_in_pro_message">This feature is only enabled in PRO version. Do you want to upgrade?</string>
    <string name="dialog_feature_only_in_pro_icon_desc">go pro</string>
    <string name="dialog_feature_only_in_pro_button_positive">Upgrade PRO</string>
    <string name="dialog_feature_only_in_pro_button_negative">No</string>
    <string name="dialog_feature_only_in_pro_title_no_exports">Premium Feature</string>
    <string name="dialog_feature_only_in_pro_message_no_exports">Exports are only available in Pro version. Upgrade to Pro now?</string>
    <string name="dialog_feature_only_in_pro_title_no_backups">Premium Feature</string>
    <string name="dialog_feature_only_in_pro_message_no_backups">Backups are only available in Pro version. Upgrade to Pro now?</string>
    <string name="dialog_feature_only_in_pro_title_only_one_workplace">Premium Feature</string>
    <string name="dialog_feature_only_in_pro_message_only_one_workplace">This version of the app only allows a single workplace. The Pro version allows you to create unlimited number of workplaces. Upgrade to Pro now?</string>
    <string name="dialog_feature_only_in_pro_title_events_approached_limit">Premium Feature</string>
    <string name="dialog_feature_only_in_pro_message_events_approached_limit">You approached the limit of 30 days of time tracking that are supported by the free version of the app. The Pro version allows you to track an unlimited number of events. Upgrade to Pro now?</string>
    <string name="settings_category_working_time">Working Time</string>
    <string name="settings_daily_working_hours_title">Daily working hours</string>
    <string name="settings_daily_working_hours_summary">The number of working hours per day.</string>
    <string name="settings_weekly_working_hours_title">Weekly working hours</string>
    <string name="settings_weekly_working_hours_summary">The number of working hours per week.</string>
    <string name="settings_category_export">Data Export</string>
    <string name="settings_export_default_mail_title">Default Email Address</string>
    <string name="settings_export_default_mail_summary">The default email address used for mailings.</string>
    <string name="settings_backup_screen_title">Backup</string>
    <string name="settings_backup_screen_summary">Specify the backupMetaData settings in order to save your data.</string>
    <string name="settings_backup_category_google_drive">Google Drive Settings</string>
    <string name="settings_backup_frequency">Save on Google Drive</string>
    <string name="settings_backup_frequency_dialogtitle">Save on Google Drive:</string>
    <string name="settings_backup_account">Account</string>
    <string name="settings_backup_account_dialogtitle">Choose an account:</string>
    <string name="settings_backup_required_connection">Requires Connection</string>
    <string name="settings_backup_required_connection_dialogtitle">Requires Connection:</string>
    <string name="settings_backup_category_last_backup">Last Backup</string>
    <string name="workplace_viewholder_label_location">Location:</string>
    <string name="workplace_viewholder_label_radius">Radius:</string>
    <string name="location_template">%1$.3f x %2$.3f</string>
    <string name="radius_template">%1$.0f</string>
    <string name="util_delete_title">Discard Item?</string>
    <string name="util_delete_action_confirm">Discard</string>
    <string name="util_delete_action_cancel">Cancel</string>
    <string name="util_import_action_confirm">Import</string>
    <string name="util_import_action_cancel">Cancel</string>
</resources>