<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings_category_working_time">

        <EditTextPreference
            android:defaultValue="8"
            android:enabled="true"
            android:inputType="number"
            android:key="setting_daily_working_hours"
            android:summary="@string/settings_daily_working_hours_summary"
            android:title="@string/settings_daily_working_hours_title" />

        <EditTextPreference
            android:defaultValue="40"
            android:enabled="true"
            android:inputType="number"
            android:key="setting_weekly_working_hours"
            android:summary="@string/settings_weekly_working_hours_summary"
            android:title="@string/settings_weekly_working_hours_title" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_category_export">

        <EditTextPreference
            android:defaultValue=""
            android:enabled="true"
            android:inputType="textEmailAddress"
            android:key="setting_exports_default_mail"
            android:summary="@string/settings_export_default_mail_summary"
            android:title="@string/settings_export_default_mail_title" />

    </PreferenceCategory>

    <PreferenceScreen
        android:key="settings_backup"
        android:persistent="false"
        android:summary="@string/settings_backup_screen_summary"
        android:title="@string/settings_backup_screen_title">

        <PreferenceCategory android:title="@string/settings_backup_category_last_backup">

            <de.iweinzierl.worktrack.view.settings.LastBackupPreference />

        </PreferenceCategory>

        <PreferenceCategory android:title="@string/settings_backup_category_google_drive">

            <ListPreference
                android:defaultValue="@string/settings_backup_frequency_default"
                android:dialogTitle="@string/settings_backup_frequency_dialogtitle"
                android:entries="@array/settings_backup_frequency_entries"
                android:entryValues="@array/settings_backup_frequency_entry_values"
                android:key="settings_backup_frequency"
                android:summary="%s"
                android:title="@string/settings_backup_frequency" />

            <ListPreference
                android:dialogTitle="@string/settings_backup_account_dialogtitle"
                android:key="settings_backup_account"
                android:title="@string/settings_backup_account" />

            <ListPreference
                android:defaultValue="@string/settings_backup_required_connection_default"
                android:dialogTitle="@string/settings_backup_required_connection_dialogtitle"
                android:entries="@array/settings_backup_required_connection_entries"
                android:entryValues="@array/settings_backup_required_connection_entry_values"
                android:key="settings_backup_required_connection"
                android:summary="%s"
                android:title="@string/settings_backup_required_connection" />

        </PreferenceCategory>
    </PreferenceScreen>
</PreferenceScreen>