<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Drawer.Header"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/app_name"
        style="@style/Drawer.Header.Text"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:background="@color/colorPrimaryDark"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/app_name"
        android:textColor="@color/drawerHeaderLabelTextColor" />

    <TextView
        android:id="@+id/proLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:paddingBottom="4dp"
        android:paddingEnd="16dp"
        android:paddingStart="0dp"
        android:paddingTop="4dp"
        android:text="@string/drawer_label_pro"
        android:textAlignment="textEnd"
        android:textColor="@color/drawerHeaderLabelTextColor"
        android:visibility="gone" />

    <TextView
        android:id="@+id/devLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/barChartOverHours"
        android:paddingBottom="4dp"
        android:paddingEnd="16dp"
        android:paddingStart="0dp"
        android:paddingTop="4dp"
        android:text="@string/drawer_label_dev"
        android:textAlignment="textEnd"
        android:textColor="@color/drawerHeaderLabelTextColor"
        android:visibility="gone" />
</LinearLayout>