<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/contentArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dialog_content_vertical_margin"
        android:paddingEnd="@dimen/dialog_content_horizontal_margin"
        android:paddingStart="@dimen/dialog_content_horizontal_margin"
        android:paddingTop="@dimen/dialog_content_vertical_margin">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dialog_space_between_title_content"
            android:text="@string/dialog_weekpicker_title"
            android:textSize="@dimen/dialog_font_size_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_weekpicker_message" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="2"
            android:rowCount="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/dialog_weekpicker_label_week"
                android:textSize="@dimen/spinner_fontsize" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/dialog_weekpicker_label_year"
                android:textSize="@dimen/spinner_fontsize" />

            <Spinner
                android:id="@+id/weekSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="3"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:textSize="@dimen/spinner_fontsize" />

            <Spinner
                android:id="@+id/yearSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="3"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:textSize="@dimen/spinner_fontsize" />
        </GridLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/actionArea"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_below="@id/contentArea"
        android:gravity="end"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/dialog_actionarea_padding_bottom"
        android:paddingEnd="@dimen/dialog_actionarea_padding_end"
        android:paddingStart="@dimen/dialog_actionarea_padding_start"
        android:paddingTop="@dimen/dialog_actionarea_padding_top">

        <Button
            android:id="@+id/negative"
            style="?android:attr/buttonBarNegativeButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dialog_button_height"
            android:text="@string/dialog_weekpicker_button_cancel"
            android:textAllCaps="true" />

        <Button
            android:id="@+id/positive"
            style="?android:attr/buttonBarPositiveButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dialog_button_height"
            android:text="@string/dialog_weekpicker_button_ok"
            android:textAllCaps="true" />

    </LinearLayout>
</RelativeLayout>