<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/container_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:id="@+id/location_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_workplace_title_query_label_location"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_radius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/container_location"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:id="@+id/radius_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_workplace_title_query_label_radius"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/radius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:textSize="16sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/container_radius"
        android:hint="@string/dialog_workplace_title_query_hint_name"
        android:padding="16dp"
        android:textSize="16sp" />

</RelativeLayout>