<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:background="@color/backgroundColor">

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_alignParentTop="true"
        android:indeterminate="true"
        android:visibility="invisible" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/backups"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/progressBar"
        android:scrollbars="vertical"
        android:visibility="gone" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/emptyView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/progressBar">

        <TextView
            android:id="@+id/emptyViewTitle"
            style="@style/AppTheme.EmptyView.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false"
            android:paddingBottom="32dp"
            android:paddingTop="32dp"
            android:text="@string/activity_manage_backups_emptyview_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/icon"
            style="@style/AppTheme.EmptyView.Icon"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:clickable="false"
            android:contentDescription="@string/activity_manage_backups_emptyview_icondesc"
            android:focusable="false"
            android:src="@drawable/clock_sad_secondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emptyViewTitle" />

        <TextView
            android:id="@+id/emptyViewText"
            style="@style/AppTheme.EmptyView.Text"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false"
            android:paddingBottom="32dp"
            android:paddingTop="32dp"
            android:text="@string/activity_manage_backups_emptyview_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon" />

        <Button
            android:id="@+id/emptyViewConfigureBackups"
            style="@style/AppTheme.EmptyView.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_manage_backups_emptyview_button_configure_backups"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emptyViewText" />

    </android.support.constraint.ConstraintLayout>

</RelativeLayout>
